--- a/core/pom.xml
+++ b/core/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>com.google</groupId>
         <artifactId>feathercoinj-parent</artifactId>
-        <version>0.98-SNAPSHOT</version>
+        <version>0.99</version>
     </parent>
 
     <groupId>com.google</groupId>
