--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.google</groupId>
   <artifactId>feathercoinj-parent</artifactId>
-  <version>0.98-SNAPSHOT</version>
+  <version>0.99</version>
   <packaging>pom</packaging>
 
   <modules>
